# lvgl_sim_vscode

./: CMakeLists.txt  README.md
app/: lvgl_app.c  lvgl_app.h  lvgl_app_config.c  lvgl_app_home.c  main.c
lv_drivers/: lv_drv_conf.h
lvgl/: lv_conf.h
lvgl/env_support/cmake/: custom.cmake
porting/: lv_porting.c  lv_porting.h
